k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: your-progress
  name: your-progress
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: your-progress
  template:
    metadata:
      labels:
        app: your-progress
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: your-progress
        image: hub.docker.bar/max/your-progress-arm64:0.0.1
        # image: hub.docker.bar/your-progress:453
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '2000m'
            memory: '2000Mi'
          requests:
            cpu: '2000m'
            memory: '2000Mi'
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            #path: /api/v1/healthcheck
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /
            #path: /api/v1/healthcheck
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 10
      restartPolicy: Always
