k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: your-progress
  name: your-progress
  namespace: dev
spec:
  ports:
  - name: '8000'
    port: 8000
    targetPort: 8000
  selector:
    app: your-progress
status:
  loadBalancer: {}
