k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-progress
  labels:
    app: your-progress
spec:
  ingressClassName: nginx
  rules:
  - host: progress.db.rv.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: your-progress
            port:
              number: 8000
